--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.BootsFaces-OSP-1.5.0.jar=C:\\Users\\usuario\\Downloads\\BootsFaces-OSP-1.5.0.jar
+file.reference.lib-20201210T142627Z-001.zip=C:\\Users\\IVETH CASTELBLANCO\\Downloads\\lib-20201210T142627Z-001.zip
+file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\IVETH CASTELBLANCO\\Desktop\\ADSI 2019\\Java\\mysql-connector-java-5.1.49-bin.jar
 file.reference.primefaces-7.0.jar=C:\\Users\\usuario\\Downloads\\primefaces-7.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -48,9 +49,10 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.primefaces-7.0.jar}:\
-    ${file.reference.BootsFaces-OSP-1.5.0.jar}
+    ${file.reference.mysql-connector-java-5.1.49-bin.jar}:\
+    ${file.reference.lib-20201210T142627Z-001.zip}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
